small reorganization - moved prototype functions into one file. maybe split out by type later if it gets too long?

--- a/examples/String.pluralize.html
+++ b/examples/String.pluralize.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>String.Pluralize Examples</title>
 	<link rel="stylesheet" href="assets/master.css" media="screen" />
-	<script src="../String.pluralize.js"></script>
+	<script src="../prototype-utils.js"></script>
 </head>
 <body>
 	<h1>String.pluralize</h1>
