--- a/examples/Date.toGenString.html
+++ b/examples/Date.toGenString.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
 	<title>Date.toGenString Examples</title>
 	<link rel="stylesheet" href="assets/master.css" media="screen" />
 	<script src="../prototype-utils.js"></script>
