Breaking out inserting into the DOM into it's own method since it was forked anyways

--- a/examples/countdown.html
+++ b/examples/countdown.html
@@ -65,7 +65,10 @@ $('textarea').countdown({thresholds: {low: 0.2, over: 0}});
 	<h2>Public Methods</h2>
 	<dl>
 		<dt>build</dt>
-		<dd>Build out the counter HTML and attach it the DOM.</dd>
+		<dd>Build out the counter HTML.</dd>
+		
+		<dt>replace</dt>
+		<dd>Replace the existing counter with the argument.</dd>
 		
 		<dt>getCount</dt>
 		<dd>Get the characters left from the max minus the number of characters in the input.</dd>
